Renaming to Friendly app

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':AccountProvider', ':AccountsLib', ':Reader', ':Foreign'
+include ':AccountProvider', ':AccountsLib', ':Foreign', ':Friendly'
