--- a/Friendly/src/main/AndroidManifest.xml
+++ b/Friendly/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.jakubczyk.syncandaccoutns.reader" >
+    package="org.jakubczyk.syncandaccoutns.friendly" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
          >
         <activity
-            android:name=".ReaderActivity"
+            android:name=".FriendlyActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
